[project]
name = "my-leetcode"
version = "0.1.0"
description = ""
authors = [
    {name = "Chikkl",email = "pavel.schershnev@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pytest (>=8.4.1,<9.0.0)",
    "pytest-asyncio (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
